--- a/home.css
+++ b/home.css
@@ -50,6 +50,11 @@
     margin-left: 250px;
 }
 
+.bottom-image {
+    margin-left: 250px;
+    margin-bottom: 20px;
+}
+
 .Top {
     margin-left: 20px;
     color: black;
